--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "mongoose": "^8.9.5",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "p-limit": "^6.2.0"
   },
   "devDependencies": {
     "dotenv": "^16.4.7",
